--- a/src/client/footer.html
+++ b/src/client/footer.html
@@ -1,35 +1,9 @@
-<!--
- Copyright (C) 2020 Alexis Boni
- 
- This program is free software: you can redistribute it and/or modify
- it under the terms of the GNU Affero General Public License as
- published by the Free Software Foundation, either version 3 of the
- License, or (at your option) any later version.
- 
- This program is distributed in the hope that it will be useful,
- but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU Affero General Public License for more details.
- 
- You should have received a copy of the GNU Affero General Public License
- along with this program.  If not, see <http://www.gnu.org/licenses/>.
--->
-
 {{#ADD_FOOTER}}
 <p>
-  <a href="https://github.com/ajboni/docurry" target="_blank">GitHub</a> ·
-  <a href="https://www.paypal.me/rdbdlf" target="_blank">PayPal Donate</a>
-  · Version <span class="version">{{VERSION}}</span>
+  Powered by
+  <a href="https://github.com/ajboni/docurry" target="_blank">🍛 Docurry</a> · A
+  spicy, zero-config documentation site generator. · Version
+  <span class="version">{{VERSION}}</span>
 </p>
 
-<p>
-  Designed and built with <span class="text-error">🧉</span> by
-  <a href="https://aboni.dev" target="_blank">Alexis Boni</a>. Licensed under
-  the
-  <a
-    href="https://github.com/ajboni/docurry/blob/master/LICENSE"
-    target="_blank"
-    >GNU AGPLv3 License</a
-  >.
-</p>
 {{/ADD_FOOTER}}
