--- a/src/client/navbar.html
+++ b/src/client/navbar.html
@@ -9,8 +9,8 @@
 
   <div class="docs-brand">
     <a class="docs-logo" href="/{{ROOT}}"
-      ><img src="/{{PROJECT_LOGO}}" alt="{{PROJECT_DESCRIPTION}}" />
-      <div class="project-name">{{PROJECT_NAME}}</div>
+      ><img src="/{{NAVBAR_LOGO}}" alt="{{PROJECT_DESCRIPTION}}" />
+      <!-- <div class="project-name">{{PROJECT_NAME}}</div> -->
       <small class="label label-secondary text-bold">DOCS</small>
     </a>
   </div>
@@ -18,7 +18,7 @@
 
 <div class="navbar-center">
   <a class="docs-logo" href="{{ROOT}}">
-    <img src="/{{PROJECT_LOGO}}" alt="{{PROJECT_DESCRIPTION}}" />
+    <img src="/{{NAVBAR_LOGO}}" alt="{{PROJECT_DESCRIPTION}}" />
   </a>
 </div>
 <nav class="navbar-right">
