--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
 <ul>
 <li><a href="/en/docs">Learn More</a></li>
 <li><a href="https://baj.itch.io/drafft">Download</a></li>
+<li><a href="https://drafft.dev">Drafft 2.0</a></li>
+
 </ul>
+          
 </main>
     </div>
 
